--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,23 +4,56 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-with, initial-scale=1.0">
 	
+	<!-- Bootstrap -->
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
+
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+
 </head>
 
 <body>
-	<h1>My HCI Friends</h1>
+	<div class="container">
+		<h1>My HCI Friends</h1>
 
-	<form id="addFriendForm" role="form" method="get" action="/add">
-		<h3>Add a friend</h3>
-	    <div class="form-group">
-	      <label for="name">Name:</label>
-	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-	    </div>
-	    <div class="form-group">
-	      <label for="description">Description:</label>
-	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-	</form>
-</body>
+		
+		{{#each friends}}
+			<div class="friend">
+				<img class="img-rounded" class="img-responsive"  
+				src={{imageURL}} width="300" >
+				<a href="#"> <h3> {{name}} </h3> </a>
+				<p> {{description}} </p>
+			</div>
+		{{/each}}
+
+		<div>
+			<img src="http://loremflickr.com/500/500/people" alt="Lorem Pixel image" class="img">
+			<h3> Fake friend </h3>
+			<p> All my friends are imaginary </p>
+		</div>
+
+		<form id="addFriendForm" role="form" method="get" action="/add">
+			<h3>Add a friend</h3>
+	    	<div class="form-group">
+	      	<label for="name">Name:</label>
+	      	<input type="text" class="form-control" id="name" placeholder="Name" name="name">
+	    	</div>
+	    	<div class="form-group">
+	      	<label for="description">Description:</label>
+	     	 <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+	   	 </div>
+	   	 <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+		</form>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="js/jquery-1.11.0.js"></script>
+		<!-- Include all compiled plugins (blelow), or include individual files as needed -->
+		<script src="js/bootstrap.js"></script>
+	</div>
+	</body>
 </html>
